--- a/index.html
+++ b/index.html
@@ -6,16 +6,87 @@
     <title>All About Kamilah S.</title>
 </head>
 <body>
-<image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3sumKwmdL47qGtglSg7BgUhwfDQbsmtc8dw&s" width=500px>
+ <image src="https://cdn.pixabay.com/photo/2016/10/11/21/18/rose-1732782_1280.jpg" width=700px>
     <h1><i>All About Kamilah S.</i></h1>
     <h2><b><i>Bio</i></b></h2>
-    <p>
+<p>
         Hello!, I'm Kamilah Soto I am a student and in computer science.
-    </p>
+</p>
     <h2><i>My Hobbies</i></h2>
-    <p>
+<p>
         My hobbies are spending time with family & friends,going shopping,Coloring or painting,playing board games,doing my makeup,cheer, and baking
-    </p>
+</p>
+    <h2><i>Fun Facts</i></h2>
+<ul>
+    <li>My name means perfect</li>
+    <li>My birthday is on "El Dia de los niños"</li>
+    <li>My dream is to trvael to Paris one day </li>
+    <li>My favorite websites are <a href= "https://www.blooket.com/">blooket</a> & <a href="https://www.coolmathgames.com/">Cool Math Games</a></li> 
+    <li>I want to be a pediatrician when im older</li>
+    <li>My favorite food is sushi and my favorite desert are cupcakes</li>
+</ul>
+<img src="https://cdn.pixabay.com/photo/2016/11/22/21/28/cupcakes-1850628_1280.jpg" width="200px"> <img src="https://cdn.pixabay.com/photo/2017/07/26/11/48/sushi-2541472_1280.jpg" width="200px">
+    <h2><i>My Schedule</i></h2>
+<table border="1">
+    <tr>
+        <th>Sunday</th>
+        <th>Monday</th>
+        <th>Tuesday</th>
+        <th>Wednesday</th>
+        <th>Thursday</th>
+        <th>Friday</th>
+        <th>Saturday</th>
+    </tr>
+    <tr>
     
+        <td>10:00am- Eat breakfast</td>
+        <td>6:00am- Get ready</td>
+        <td>6:00am- Get ready</td>
+        <td>7:00am- Get ready</td>
+        <td>6:00am- Get ready</td>
+        <td>6:00am- Get ready</td>
+        <td>11:00am- Eat breakfast</td>
+    </tr>
+    <tr>
+        <td>12:00pm- Take a shower</td>
+        <td>8:00am- Start school</td>
+        <td>8:00am- Start school</td>
+        <td>8:40am- Start school</td>
+        <td>8:00am- Start school</td>
+        <td>8:00am- Start school</td>
+        <td>12:00pm- Take a shower</td>
+    </tr>
+    <tr>
+        <td>2:00pm- Wash clothes & clean</td>
+        <td>3:30pm- Get home & eat</td>
+        <td>3:30pm- Go to practice</td>
+        <td>2:30pm- Go to practice</td>
+        <td>3:30pm- Get home & eat</td>
+        <td>3:30pm- Go to practice</td>
+        <td>2:00pm-Get ready to hangout with family</td>
+    </tr>
+    <tr>
+        <td>4:00pm- Get my things ready</td>
+        <td>5:00pm- Do homework</td>
+        <td>8:00pm- Get home & eat </td>
+        <td>6:00pm- Get home & eat</td>
+        <td>5:00pm- Do homework</td>
+        <td>6:00pm- Get home & eat</td>
+        <td>10:00pm-Get home & lay down</td>
+   </tr>
+    <tr>
+    <td>8:00pm- Go to my nanas</td>
+    <td>10:00pm- Go to bed</td>
+    <td>9-10:00pm- Shower & go to bed</td>
+    <td>9-10:00pm- Shower & Go to bed</td>
+    <td>10:00pm- Go to bed</td>
+    <td>10:00pm- Go to bed</td>
+    <td>12:00am- Go to bed</td>
+  </tr>
+</table>
+    <h2><i>Sources</i></h2>
+    Pixabay, 
+    tarasov1984,Pexels, & 
+    Myriams-Fotos
 </body>
 </html>
