--- a/index.html
+++ b/index.html
@@ -4,6 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All About Kamilah S.</title>
+    <style>
+        body {
+            background-color: lightpink;
+        }
+
+        h1 {background-color: lightyellow;
+        font-family: cursive;
+        color: pink;
+        }
+        
+        h2 {
+            background-color: lightyellow;
+            font-family: cursive;
+            color: pink;
+        }
+
+        p {
+            background-color: deeppink;
+            font-family: monospace;
+            color: pink;
+        }
+
+        li {
+            background-color: deeppink;
+            font-family: monospace;
+            color: pink;
+        }
+    </style>
 </head>
 <body>
  <image src="https://cdn.pixabay.com/photo/2016/10/11/21/18/rose-1732782_1280.jpg" width=700px>
@@ -18,12 +46,12 @@
 </p>
     <h2><i>Fun Facts</i></h2>
 <ul>
-    <li>My name means perfect</li>
-    <li>My birthday is on "El Dia de los niños"</li>
-    <li>My dream is to trvael to Paris one day </li>
-    <li>My favorite websites are <a href= "https://www.blooket.com/">blooket</a> & <a href="https://www.coolmathgames.com/">Cool Math Games</a></li> 
-    <li>I want to be a pediatrician when im older</li>
-    <li>My favorite food is sushi and my favorite desert are cupcakes</li>
+       <li>My name means perfect</li>
+       <li>My birthday is on "El Dia de los niños"</li>
+       <li>My dream is to trvael to Paris one day </li>
+       <li>My favorite websites are <a href= "https://www.blooket.com/">blooket</a> & <a href="https://www.coolmathgames.com/">Cool Math Games</a></li> 
+       <li>I want to be a pediatrician when im older</li>
+       <li>My favorite food is sushi and my favorite desert are cupcakes</li>
 </ul>
 <img src="https://cdn.pixabay.com/photo/2016/11/22/21/28/cupcakes-1850628_1280.jpg" width="200px"> <img src="https://cdn.pixabay.com/photo/2017/07/26/11/48/sushi-2541472_1280.jpg" width="200px">
     <h2><i>My Schedule</i></h2>
@@ -75,13 +103,13 @@
         <td>10:00pm-Get home & lay down</td>
    </tr>
     <tr>
-    <td>8:00pm- Go to my nanas</td>
-    <td>10:00pm- Go to bed</td>
-    <td>9-10:00pm- Shower & go to bed</td>
-    <td>9-10:00pm- Shower & Go to bed</td>
-    <td>10:00pm- Go to bed</td>
-    <td>10:00pm- Go to bed</td>
-    <td>12:00am- Go to bed</td>
+        <td>8:00pm- Go to my nanas</td>
+        <td>10:00pm- Go to bed</td>
+        <td>9-10:00pm- Shower & go to bed</td>
+        <td>9-10:00pm- Shower & Go to bed</td>
+        <td>10:00pm- Go to bed</td>
+        <td>10:00pm- Go to bed</td>
+        <td>12:00am- Go to bed</td>
   </tr>
 </table>
     <h2><i>Sources</i></h2>
