--- a/index.html
+++ b/index.html
@@ -4,58 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All About Kamilah S.</title>
-    <style>
-        body {
-            background-color: lightpink;
-        }
-
-        h1 {background-color: lightyellow;
-        font-family: cursive;
-        color: pink;
-        }
-        
-        h2 {
-            background-color: lightyellow;
-            font-family: cursive;
-            color: pink;
-        }
-
-        p {
-            background-color: deeppink;
-            font-family: monospace;
-            color: pink;
-        }
-
-        li {
-            background-color: deeppink;
-            font-family: monospace;
-            color: pink;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
- <image src="https://cdn.pixabay.com/photo/2016/10/11/21/18/rose-1732782_1280.jpg" width=700px>
+    <image src="https://cdn.pixabay.com/photo/2016/10/11/21/18/rose-1732782_1280.jpg" width=700px>
     <h1><i>All About Kamilah S.</i></h1>
+
     <h2><b><i>Bio</i></b></h2>
-<p>
-        Hello!, I'm Kamilah Soto I am a student and in computer science.
-</p>
+    <p>
+            Hello!, I'm Kamilah Soto I am a student and in computer science.
+    </p>
+
     <h2><i>My Hobbies</i></h2>
-<p>
-        My hobbies are spending time with family & friends,going shopping,Coloring or painting,playing board games,doing my makeup,cheer, and baking
-</p>
+    <p>
+        My hobbies are spending time with family & friends,going <a href="shopping.html">shopping</a>,Coloring or painting,playing board games,doing my makeup,cheer, and baking      
+    </p>
+
     <h2><i>Fun Facts</i></h2>
-<ul>
+    <ul>
        <li>My name means perfect</li>
        <li>My birthday is on "El Dia de los niños"</li>
-       <li>My dream is to trvael to Paris one day </li>
+       <li>My dream is to travel to Paris one day </li>
        <li>My favorite websites are <a href= "https://www.blooket.com/">blooket</a> & <a href="https://www.coolmathgames.com/">Cool Math Games</a></li> 
        <li>I want to be a pediatrician when im older</li>
        <li>My favorite food is sushi and my favorite desert are cupcakes</li>
-</ul>
-<img src="https://cdn.pixabay.com/photo/2016/11/22/21/28/cupcakes-1850628_1280.jpg" width="200px"> <img src="https://cdn.pixabay.com/photo/2017/07/26/11/48/sushi-2541472_1280.jpg" width="200px">
+    </ul>
+
+    <img src="https://cdn.pixabay.com/photo/2016/11/22/21/28/cupcakes-1850628_1280.jpg" width="200px"> <img src="https://cdn.pixabay.com/photo/2017/07/26/11/48/sushi-2541472_1280.jpg" width="200px">
     <h2><i>My Schedule</i></h2>
-<table border="1">
+    <table border="1">
     <tr>
         <th>Sunday</th>
         <th>Monday</th>
@@ -102,7 +80,7 @@
         <td>6:00pm- Get home & eat</td>
         <td>10:00pm-Get home & lay down</td>
    </tr>
-    <tr>
+   <tr>
         <td>8:00pm- Go to my nanas</td>
         <td>10:00pm- Go to bed</td>
         <td>9-10:00pm- Shower & go to bed</td>
@@ -111,7 +89,9 @@
         <td>10:00pm- Go to bed</td>
         <td>12:00am- Go to bed</td>
   </tr>
-</table>
+
+  </table>
+  
     <h2><i>Sources</i></h2>
     Pixabay, 
     tarasov1984,Pexels, & 
