--- a/shopping.html
+++ b/shopping.html
@@ -9,5 +9,22 @@
 <body>
     <a href="index.html">home</a>
     <h1>My Favorite Places To Shop</h1>
+    <p>
+        <ul>
+            <li>Aero Postale</li>
+            <li>American Eagle</li>
+            <li>Hollister</li>
+            <li>Target</li>
+            <li>Ulta</li>
+            <li>Sephora</li>
+            <li>Tucson Outlets</li>
+        </ul>
+    </p>
+    <h1>Why they're my favorite</h1>
+    <h5>These stores are my favorite for many reasons, i'll give a few examples. Starting off with Aero Postale, They have such cute jeans and shirts I just overall enjoy shoppimg there.
+        Next is American Eagle I really like their jeans and that's one of my top two places where i'd shop. Next is Hollister that is my top 1 for jeans they are so cute and comfortable.
+        Moving on to more makeup stores like Target , Ulta & Sephora those are my favorite to find makeup especially target because ulta and sephora can get a bit pricey at times. Lastly,
+        the Tucson outlets that's because if you really have money you can go and they have many stores on the more pricey side if you're feeling fancy.</h5>
+
 </body>
 </html>
