--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <h2><i>My Hobbies</i></h2>
     <p>
-        My hobbies are spending time with family & friends,going <a href="shopping.html">shopping</a>,Coloring or painting,playing board games,doing my makeup,cheer, and baking      
+        My hobbies are spending time with family & friends,going <a href="shopping.html">shopping</a>,Coloring or painting,playing board games,doing my makeup,cheer, and <a href="baking.html">Baking</a>      
     </p>
 
     <h2><i>Fun Facts</i></h2>
