--- a/shopping.html
+++ b/shopping.html
@@ -12,20 +12,25 @@
     <p>
         <ul>
             <li>Aero Postale</li>
-            <li>American Eagle</li>
-            <li id="Top one">Hollister</li>
+            <li class="Top">American Eagle</li>
+            <li class="Top">Hollister</li>
             <li>Target</li>
-            <li>Ulta</li>
+            <li class="Top">Ulta</li>
             <li>Sephora</li>
             <li>Tucson Outlets</li>
         </ul>
     </p>
-        <h1>Why they're my favorite</h1>
+        <h1 id-="Why">Why they're my favorite</h1>
         <h5>These stores are my favorite for many reasons, i'll give a few examples. Starting off with Aero Postale, They have such cute jeans and shirts I just overall enjoy shoppimg there.
         Next is American Eagle I really like their jeans and that's one of my top two places where i'd shop. Next is Hollister that is my top 1 for jeans they are so cute and comfortable.
         Moving on to more makeup stores like Target , Ulta & Sephora those are my favorite to find makeup especially target because ulta and sephora can get a bit pricey at times. Lastly,
         the Tucson outlets that's because if you really have money you can go and they have many stores on the more pricey side if you're feeling fancy.</h5>
 
-
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWAf-DYY11tr7tApUQVmrLrmD598-4To38nQ&s" width="250px">
+        <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/59/0f/e5/590fe5db-bac7-ece3-b349-15edf84aa600/AppIcon-0-0-1x_U007ephone-0-1-0-sRGB-85-220.png/1200x600wa.png" width="250px">
+        
+        <h3>
+            Sources: Hollister, West Edmonton Mall & Ulta, on apple app store
+        </h3>
 </body>
 </html>
