--- a/baking.html
+++ b/baking.html
@@ -26,11 +26,11 @@
    </p>
    <h3>Who Do I Bake With?</h3>
    <p>
-        I prefer to bake by myself but if I'm baking withb anyone it's my mom & stepdad
+        I prefer to bake by myself but if I'm baking with anyone it's my mom & stepdad
    </p>
    <h3 id="sources">Sources</h3>
-        <a href="https://lifemadesimplebakes.com/thick-chewy-better-boxed-brownies/">brownies,</a>
-        <a href="https://www.justsotasty.com/small-batch-vanilla-cupcakes/">cupcakes,</a>
-        <a href="https://flouringkitchen.com/pink-velvet-cake/">cake</a>
+       <a href="https://lifemadesimplebakes.com/thick-chewy-better-boxed-brownies/">brownies,</a>
+       <a href="https://www.justsotasty.com/small-batch-vanilla-cupcakes/">cupcakes,</a>
+       <a href="https://flouringkitchen.com/pink-velvet-cake/">cake</a>
 </body>
 </html>
